Closed
Bug 345418
Opened 19 years ago
Closed 19 years ago
ASSERTION: trying to construct an SVGTSpanFrame for an invalid container
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: longsonr)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files, 2 obsolete files)
|
68 bytes,
image/svg+xml
|
Details | |
|
2.24 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: trying to construct an SVGTSpanFrame for an invalid container: 'Error', file /Users/admin/trunk/mozilla/layout/svg/base/src/nsSVGTSpanFrame.cpp, line 57
And similar assertions:
http://lxr.mozilla.org/seamonkey/search?string=invalid+container
I think these are just bogus assertions.
| Reporter | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 2•19 years ago
|
||
Should write to the Error Console instead.
| Assignee | ||
Comment 3•19 years ago
|
||
Attachment #231091 -
Flags: review?(tor) → review+
| Assignee | ||
Updated•19 years ago
|
Attachment #231091 -
Flags: superreview?(roc)
Comment on attachment 231091 [details] [diff] [review]
convert assert to warning in Error Console
IMHO this check should remain an assertion and code should be added to nsCSSFrameConstructor to prevent this being reached. nsCSSFrameConstructor is the place where we detect and handle invalid DOMs.
Attachment #231091 -
Flags: superreview?(roc) → superreview-
| Assignee | ||
Comment 5•19 years ago
|
||
I've not put in any console logging. There isn't any currently in nsCSSFrameConstructor but it wouldn't be too difficult to write a static ReportInvalidParent method, though I'm not sure which properties file to use. Presumably various html elements could have an invalid parent also.
Attachment #231091 -
Attachment is obsolete: true
Attachment #232554 -
Flags: review?(roc)
+ if (aParentFrame->IsFrameOfType(nsIFrame::eSVG)) {
Why bother with this check?
Otherwise, looks great.
| Assignee | ||
Comment 7•19 years ago
|
||
Attachment #232554 -
Attachment is obsolete: true
Attachment #232675 -
Flags: superreview?(tor)
Attachment #232675 -
Flags: review?(roc)
Attachment #232554 -
Flags: review?(roc)
Attachment #232675 -
Flags: superreview?(tor)
Attachment #232675 -
Flags: superreview+
Attachment #232675 -
Flags: review?(roc)
Attachment #232675 -
Flags: review+
| Assignee | ||
Comment 8•19 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•