Bug 345418 - ASSERTION: trying to construct an SVGTSpanFrame for an invalid container. r+sr=roc